--- a/ecclesia/lectio/mateo/mateo3.html
+++ b/ecclesia/lectio/mateo/mateo3.html
@@ -13,12 +13,12 @@
   <header>
     <div class="container">
       <p class="logo"> CRISTO SALVADOR</p>
-      <!-- ****************************************************** -->
+      <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
       <a href="#alInicio"><img src="../../../media/ESCUDOCARM.png" alt="" class="logoC"></a>
       <a href="./index.html" class="nombre">INICIO </a>
     </div>
   </header> <br><br>
-  <!-- ****************************************************************** -->
+  <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
   <h1 class="init">Mateo 3</h1>
   <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor, <br> ni aceptes como Amor lo que no proviene de
     la Verdad"
@@ -26,7 +26,7 @@
   </h3>
 
 
-  <!-- ****************************************************************** -->
+  <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
 
   <section id="0">
     <hr>
@@ -41,7 +41,7 @@
 
     </div>
   </section>
-  <!-- ****************************************************************** -->
+  <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
   <section id="1">
     <h2 class="subtitulo">Mat 3,1-12 Juan el Bautista prepara el camino</h2>
     <!-- /////////////////////////////////////// -->
@@ -75,7 +75,7 @@
           </p>
         </details>
       </li>
-      <!-- ****************************** -->
+      <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Variaciones en el Texto</summary>
@@ -118,7 +118,7 @@
           </p>
         </details>
       </li>
-      <!-- ****************************** -->
+      <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Paralelos</summary>
@@ -164,7 +164,7 @@
           </p>
         </details>
       </li>
-      <!-- ****************************** -->
+      <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Temas</summary>
@@ -227,7 +227,7 @@
           </p>
         </details>
       </li>
-      <!-- ****************************** -->
+      <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Patrística</summary>
@@ -273,7 +273,7 @@
           </p>
         </details>
       </li>
-      <!-- ****************************** -->
+      <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Magisterio</summary>
@@ -334,7 +334,7 @@
           </p>
         </details>
       </li>
-      <!-- ****************************** -->
+      <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Metanoia</summary>
@@ -344,22 +344,22 @@
             <li>La fe se prueba en los frutos</li>
             <li>La vida como la mejor predicación</li>
             <li>"La conversión no es solo dejar el pecado, sino volverse hacia Dios con todo el corazón.” Agustín</li>
-          
+
           </OL>
         </details>
       </li>
-      <!-- ****************************** -->
+      <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary></summary>
           <p><br><br></p>
         </details>
       </li>
-      <!-- ****************************** -->
+      <!-- ++++++++++++++++++++++++++++++ -->
 
     </ol>
   </section>
-  <!-- ****************************************************************** -->
+  <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
   <section id="2">
     <h2 class="subtitulo">Mat 3,13-17 El bautismo de Jesús</h2>
     <!-- /////////////////////////////////////// -->
@@ -380,7 +380,7 @@
           </p>
         </details>
       </li>
-      <!-- ****************************** -->
+      <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Variaciones en el Texto</summary>
@@ -420,7 +420,7 @@
           </p>
         </details>
       </li>
-      <!-- ****************************** -->
+      <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Paralelos</summary>
@@ -458,7 +458,7 @@
           </p>
         </details>
       </li>
-      <!-- ****************************** -->
+      <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Temas</summary>
@@ -468,7 +468,7 @@
 
             El Hijo(Jesús) está en el agua.<br>
             El Espíritu Santo desciende como paloma.<br>
-            La voz del Padre proclama: *“Este es mi Hijo amado, en quien me complazco.”<br><br>
+            La voz del Padre proclama: “Este es mi Hijo amado, en quien me complazco.”<br><br>
 
             Es uno de los pocos momentos en la Escritura donde se manifiestan las tres personas divinas simultáneamente.
 
@@ -483,7 +483,7 @@
             <br><br>
 
             3. Jesús como Siervo sufriente<br>
-            La expresión *“en quien me complazco” recuerda aIsaías 42,1 el primer cántico del Siervo, lo cual sugiere
+            La expresión “en quien me complazco” recuerda aIsaías 42,1 el primer cántico del Siervo, lo cual sugiere
             que Jesús es el Siervo que sufre por la salvación del pueblo.
 
             <br> Esto prepara el camino para el misterio de la Cruz desde el principio de su misión.
@@ -497,13 +497,14 @@
             “Justicia” aquí se entiende como obediencia total al plan de Dios incluyendo la solidaridad con los
             pecadores.<br>
 
-            <br> Aunque no tiene pecado,Jesús se une al pueblo que busca conversión**: se pone en la fila con los
+            <br> Aunque no tiene pecado,Jesús se une al pueblo que busca conversión: se pone en la fila con los
             pecadores.
 
             <br><br>
 
             5. El Espíritu Santo y la unción mesiánica<br>
-            El descenso del Espíritu es una señal clara de launción de Jesús como Mesías(cf. Isaías 61,1; Hechos 10,38).
+            El descenso del Espíritu es una señal clara de la unción de Jesús como Mesías(cf. Isaías 61,1; Hechos
+            10,38).
 
             <br> Jesús es presentado como el Ungido por el Espíritu y así comienza su misión pública.
 
@@ -511,21 +512,21 @@
 
             6. Nuevo comienzo / Nueva creación<br>
             El Espíritu sobre el agua recuerdaGénesis 1,2, donde el Espíritu se movía sobre las aguas. <br>
-            El bautismo de Jesús marca elcomienzo de la nueva creación**.
+            El bautismo de Jesús marca el comienzo de la nueva creación++.
 
             <br><br>
 
             En resumen:
             Mateo 3,13–17 enseña que:
-            <br> Jesús esel Hijo amado, elMesías Siervo obediente hasta la cruz.
-            <br> Se inicia lamisión mesiánicacon launción del Espíritu.
-            <br> Se revela elDios trinitario**.
+            <br> Jesús es el Hijo amado, el Mesías Siervo obediente hasta la cruz.
+            <br> Se inicia la misión mesiánica con la unción del Espíritu.
+            <br> Se revela el Dios trinitario.
             <br> Se abre un camino nuevo:Jesús inaugura el Reino de Dios en la humildad y el servicio.
             <br>
           </p>
         </details>
       </li>
-      <!-- ****************************** -->
+      <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Patrística</summary>
@@ -578,7 +579,7 @@
           </p>
         </details>
       </li>
-      <!-- ****************************** -->
+      <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Magisterio</summary>
@@ -600,7 +601,8 @@
             <br><br>
             3. Cristo inaugura el nuevo bautismo <br>
             CIC 1224: <br>
-            “Nuestro Señor se sometió voluntariamente al bautismo de San Juan, destinado a los pecadores, para manifestar su ‘anonadamiento’ (Flp 2,7).”
+            “Nuestro Señor se sometió voluntariamente al bautismo de San Juan, destinado a los pecadores, para
+            manifestar su ‘anonadamiento’ (Flp 2,7).”
             <br> Jesús inaugura el bautismo cristiano, no con agua solamente, sino con el Espíritu Santo y fuego (cf. Mt
             3,11).
             <br><br>
@@ -612,8 +614,10 @@
             resucitar a la vida nueva por el bautismo.
             <br><br>
             Documentos adicionales <br>
-            <br> San Juan Pablo II, en su encíclica Redemptor Hominis (1979), menciona que en el bautismo de Jesús se manifiesta el amor del Padre por la humanidad y la misión redentora del Hijo.
-            <br> Papa Benedicto XVI, en su libro Jesús de Nazaret, señala que el bautismo de Jesús es un “descenso al abismo de la muerte” que prefigura su pasión y solidaridad con la humanidad caída.
+            <br> San Juan Pablo II, en su encíclica Redemptor Hominis (1979), menciona que en el bautismo de Jesús se
+            manifiesta el amor del Padre por la humanidad y la misión redentora del Hijo.
+            <br> Papa Benedicto XVI, en su libro Jesús de Nazaret, señala que el bautismo de Jesús es un “descenso al
+            abismo de la muerte” que prefigura su pasión y solidaridad con la humanidad caída.
             <br><br>
             En resumen: <br>
             El Magisterio enseña que:
@@ -625,22 +629,20 @@
           </p>
         </details>
       </li>
-      <!-- ****************************** -->
+      <!-- ++++++++++++++++++++++++++++++ -->
       <li>
         <details class="select">
           <summary>Metanoia</summary>
-        <ol>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ol>
+          <ol>
+            <li>La importancia del orden, la progresión y el proceso, Mt 6,31-34 y 3,11</li>
+            <li>Apertura y disposición a la acción de Dios en obediencia, humildad y servicio</li>
+            <li>Para entender debo ser uno con la persona, pero evitando el pecado</li>
+            <li></li>
+
+          </ol>
         </details>
       </li>
-      <!-- ****************************** -->
+      <!-- ++++++++++++++++++++++++++++++ -->
 
       <li>
         <details class="select">
@@ -648,13 +650,13 @@
           <p><br><br></p>
         </details>
       </li>
-      <!-- ****************************** -->
+      <!-- ++++++++++++++++++++++++++++++ -->
 
     </ol>
     <!-- ////////////////////////////////// -->
 
   </section>
-  <!-- ****************************************************************** -->
+  <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
 
 
 
